[fixed] navbar title overlapped if too long

--- a/assets/css/nav/navbar_4.css
+++ b/assets/css/nav/navbar_4.css
@@ -23,7 +23,7 @@
 
 .navbar_4.logo-div h3, .navbar_4.logo-div { text-decoration: none; color: #333333; text-transform: uppercase; margin-left: 20px; float: left; }
 .navbar_4.logo-div { margin: 0; padding: 0; min-width: 150px; max-width: 300px; height: 100%; }
-.navbar_4.logo-div h3 { display: inline-block; position: relative; margin: 0; margin-left: 20px; padding: 0; top: 50%; transform: translateY(-50%); font-size: 15px; }
+.navbar_4.logo-div h3 { display: inline-block; position: relative; margin: 0; margin-left: 20px; padding: 0; top: 50%; transform: translateY(-50%); font-size: 15px; max-width: calc(300px - 100px) }
 .navbar_4.topbar-button { display: inline-block; position: relative; margin: 0 5px; padding: 0; background: transparent; float: right; text-decoration: none; color: #333333; top: 50%; transform: translateY(-50%); }
 .navbar_4.main { border-radius: 0; width: 100%; }
 .navbar_4.mobilenav .navbar_4#brandname {  width: calc(100% - 10px); text-decoration: none; margin: 0; padding: 0; margin-left: 10px; color: #333333; display: inline-block; top: 50% !important; position: relative; transform: translateY(-50%); }
